Fixed layout bug

--- a/AC Control/Client/src/Styles/styles.scss
+++ b/AC Control/Client/src/Styles/styles.scss
@@ -27,10 +27,15 @@ body {
     }
     
     .frame-container {
-        width: 400px;
+        width: 100%;
         max-height: 150px;
-        display: flex;
-        justify-content: center;
+
+        .inner-frame {
+            position: relative;
+            transform: translateX(-50%);
+            width: min-content;
+            left: 50%;
+        }
 
         #frame {
             height: 100%;
@@ -192,7 +197,7 @@ body {
 .buttons {
     border: solid 1px #000;
     padding: 5px;
-    height: 50%;
+    height: max-content;
     overflow: auto;    
 }
 
